--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "conventionalCommits.scopes": ["repo", "screens", "navigation"]
+  "conventionalCommits.scopes": ["repo", "screens", "navigation", "assets"]
 }
