feat(components): :sparkles: add auth layout

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "conventionalCommits.scopes": ["repo", "screens", "navigation", "assets"]
+  "conventionalCommits.scopes": [
+    "repo",
+    "screens",
+    "navigation",
+    "assets",
+    "components"
+  ]
 }
