--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,3 @@
 {
-  "conventionalCommits.scopes": [
-    "repo",
-    "screens",
-    "navigation",
-    "assets",
-    "components"
-  ]
+  "conventionalCommits.scopes": ["repo", "screens", "navigation", "assets", "components", "constants"]
 }
