--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "typescript": "^4.6.3",
-    "react-native-reanimated": "~2.9.1"
+    "zustand": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
