feat(stores): :sparkles: add folder

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-  "conventionalCommits.scopes": ["repo", "screens", "navigation", "assets", "components", "constants"]
+  "conventionalCommits.scopes": [
+    "repo",
+    "screens",
+    "navigation",
+    "assets",
+    "components",
+    "constants",
+    "stores"
+  ]
 }
