--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-native-reanimated": "~2.9.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.6.3",
-    "zustand": "^4.1.2"
+    "zustand": "^4.1.2",
+    "react-native-svg": "12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
