--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.6.3",
     "zustand": "^4.1.2",
-    "react-native-svg": "12.3.0"
+    "react-native-svg": "12.3.0",
+    "lottie-react-native": "5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
